# talks

./: LICENSE  README.md
2016-05-laf/: README.md  index.html  laf.cabal  stack.yaml
2016-05-laf/src/: Cytoscape.hs  Main.hs  MathJax.hs  SemanticUI.hs  Slides.hs
2016-10-haskell-exchange/: virtual-hom.pptx
2016-12-scala-exchange/: 2016-12-09 Stream Processing.pptx  stream-processing.pptx
